--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fancy mobile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>fancyphone founder</h1>
-    <script src="api.js"></script>
+<!--body section-->
+<body class="bg-secondary">
+    <h1 class="text-center text-info">fancyphone founder</h1>
+    <div class="container w-50 mt-5">
+      <div class="input-group mb-3">
+        <input id="search-box" type="text" class="form-control" placeholder="search" aria-label="search" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button onclick="alldevices()" class="btn btn-outline-danger" type ="search">search</button>
+        </div>  
+      </div>      
+    </div>
+    <!-- phones details section -->
+     <div id="container" class="m-5">
+      
+  
+     </div>
+
+  <script src="api.js"></script>
 </body>
 </html>
